refactor(calibration): improve code quality, security, and maintainability
Major refactoring to address critical complexity and security issues identified
in codebase analysis.

## Security Improvements

### 1. Service Parameter Validation
- Added entity_id type checking (must be string)
- Verify entity exists in entity registry
- Verify entity belongs to ubisys platform (prevents wrong device access)
- Enhanced error messages with specific details

**Impact**: Prevents potential injection attacks and accidental misuse

### 2. Race Condition Fix
- Replaced TOCTOU-vulnerable set-based tracking with asyncio.Lock
- Per-device locking (different devices can calibrate simultaneously)
- Automatic lock release via context manager
- Non-blocking lock check with clear error message

**Impact**: Eliminates concurrent calibration interference

## Code Quality Improvements

### Main Refactoring: _perform_calibration()
**Before**: 274-line monolithic function with 7 responsibilities
**After**: 81-line orchestrator + 6 phase functions

New structure:
- _validate_device_ready() (38 lines) - Pre-flight checks
- _calibration_phase_1_enter_mode() (45 lines) - Enter mode & configure
- _calibration_phase_2_find_top() (52 lines) - Find top limit
- _calibration_phase_3_find_bottom() (77 lines) - Find bottom + read steps
- _calibration_phase_4_verify() (49 lines) - Verification move
- _calibration_phase_5_finalize() (49 lines) - Write tilt + exit mode
- _perform_calibration() (81 lines) - Orchestrator

**Key metrics**:
- 70% reduction in main function size (274 → 81 lines)
- Average function size: 55 lines (down from 77)
- 9/13 functions now under 60 lines

### Benefits
✅ Each phase can be modified independently
✅ Each phase can be tested independently
✅ Clear separation of concerns (Single Responsibility Principle)
✅ Better error messages (shows which phase failed)
✅ Easier to debug (can step through phases)
✅ Easier to maintain (change one phase without affecting others)

## Logging Imp

--- a/custom_components/ubisys/services.yaml
+++ b/custom_components/ubisys/services.yaml
@@ -1,14 +1,35 @@
 calibrate_j1:
   name: Calibrate Ubisys J1
   description: >
-    Run the automated calibration sequence for a Ubisys J1 window covering controller.
-    This will move the cover through its full range to measure total steps and configure
-    the device for the selected shade type (including tilt settings for venetian blinds).
-    The calibration process takes approximately 2 minutes to complete.
+    Calibrate your Ubisys J1 blind/shade using automatic motor stall detection.
+
+
+    **What happens during calibration:**
+
+    1. Blind moves UP until it reaches the top (motor stalls)
+
+    2. Blind moves DOWN until it reaches the bottom (motor stalls)
+
+    3. Blind moves back UP to verify (returns to top)
+
+    4. Device measures and stores total travel distance
+
+
+    **Duration:** 60-120 seconds depending on blind size
+
+
+    **Important:** The blind will automatically find its limits no matter where it starts.
+    You do NOT need to position it at a specific location before calibration.
+
+
+    **Works for:** Roller shades, cellular shades, vertical blinds, and venetian blinds.
+
+
+    Make sure the blind can move freely without obstructions before starting.
   fields:
     entity_id:
-      name: Entity
-      description: The Ubisys J1 cover entity to calibrate.
+      name: Cover Entity
+      description: The Ubisys J1 cover entity you want to calibrate.
       required: true
       selector:
         entity:
